compiler/testData/compileKotlinAgainstCustomBinaries/missingStaticClass/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/missingStaticClass/source.kt:4:15: error: cannot access class 'test.C.D'. Check your module classpath for missing or conflicting dependencies
    konst c = C.makeD()
              ^
COMPILATION_ERROR
